Upgrade to Java 17 (#626)